deployment-cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-cache
  labels:
    app: deployment-cache
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-cache
  template:
    metadata:
      labels:
        app: deployment-cache
    spec:
      containers:
      - image: wbitt/network-multitool
        name: multitool
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: cache

---
apiVersion: v1
kind: Service
metadata:
  name: svc-cache
  namespace: app
spec:
  selector:
    app: deployment-cache
  ports:
  - name: multitool
    port: 80
  type: ClusterIP
