deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-frontend
  labels:
    app: deployment-frontend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-frontend
  template:
    metadata:
      labels:
        app: deployment-frontend
    spec:
      containers:
      - image: wbitt/network-multitool
        name: multitool
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: app
spec:
  selector:
    app: deployment-frontend
  ports:
  - name: nginx
    port: 80
  type: ClusterIP
