cach-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cache-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
     app: deployment-cache
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: deployment-backend
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
