default-nwpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-nwpolicy
  namespace: app
spec:
  PodSelector: {}
  policyTypes:
    - Ingress
